--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
 
       <a href="#">
-        <h1 class="logo">JOSÉ <span>ANTONIO</span></h1>
+        <h1 class="logo">JOSÉ <span>NTONIO</span></h1>
       </a>
 
       <button class="nav-toggle-btn" aria-label="Toggle Menu" data-nav-toggle-btn>
