--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
 
       <a href="#">
-        <h1 class="logo">JOSÉ <span>NTONIO</span></h1>
+        <h1 class="logo">JOSÉ <span>ANTONIO</span></h1>
       </a>
 
       <button class="nav-toggle-btn" aria-label="Toggle Menu" data-nav-toggle-btn>
@@ -326,13 +326,13 @@
 
       <ul class="social-links">
         <li>
-          <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
+          <a href="https://www.linkedin.com/in/cireneu-jose-antonio/"><ion-icon name="logo-linkedin"></ion-icon></a>
       </li>
       <li>
-        <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+        <a href="https://www.instagram.com/ciriusblack_/"><ion-icon name="logo-instagram"></ion-icon></a>
       </li>
       <li>
-        <a href="#"><ion-icon name="logo-github"></ion-icon></a>
+        <a href="https://github.com/ciriusblack13"><ion-icon name="logo-github"></ion-icon></a>
       </li>
       </ul>
 
