Added resume's file, fixet page's link problem

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </li>
 
           <li>
-            <a href="#" class="btn btn-primary">Download CV</a>
+            <a href="./assets/docs/resume.pdf" class="btn btn-primary">Download CV</a>
           </li>
 
         </ul>
