--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -17,6 +17,52 @@
     <title>Document</title>
   </head>
   <body>
+
+    <header class="header" data-header>
+      <div class="container">
+  
+        <a href="../../index.html">
+          <h1 class="logo">JOSÉ <span>ANTONIO</span></h1>
+        </a>
+  
+        <button class="nav-toggle-btn" aria-label="Toggle Menu" data-nav-toggle-btn>
+          <ion-icon name="menu-outline" class="menu-icon"></ion-icon>
+          <ion-icon name="close-outline" class="close-icon"></ion-icon>
+        </button>
+  
+        <nav class="navbar container">
+          <ul class="navbar-list">
+  
+            <li>
+              <a href="../../index.html" class="navbar-link" data-nav-link>Home</a>
+            </li>
+  
+            <li>
+              <a href="../../index.html#about" class="navbar-link" data-nav-link>About</a>
+            </li>
+  
+            <li>
+              <a href="../../index.html#works" class="navbar-link" data-nav-link>Works</a>
+            </li>
+  
+            <li>
+              <a href="../../index.html#skills" class="navbar-link" data-nav-link>Skills</a>
+            </li>
+  
+            <li>
+              <a href="./assets/pages/contact.html" class="navbar-link" data-nav-link>Contact</a>
+            </li>
+  
+            <li>
+              <a href="../docs/resume.pdf" class="btn btn-primary">Download CV</a>
+            </li>
+  
+          </ul>
+        </nav>
+  
+      </div>
+    </header>
+
     <!-- CONTACT -->
 
     <section class="section contact" id="contact">
@@ -59,7 +105,7 @@
     </section>
 
     <!-- CUSTOM JS-->
-    <script src="./assets/js/main.js"></script>
+    <script src="../js/main.js"></script>
 
     <!-- IONICON LINK -->
     <script
