Added 1st project link

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           <ul class="works-list">
 
             <li>
-              <a href="#" class="works-card" style="background-image: url('./assets/img/ristorante.png');">
+              <a href="https://ciriusblack13.github.io/Ristorante_Angolano/" class="works-card" style="background-image: url('./assets/img/ristorante.png');">
                 <div class="card-content">
                   <div class="card-text">
                   <p class="card-subtitle">HTML / CSS</p>
