Moved to root work and contacs pages, fixed some link's problmes, addes favicon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+    <!-- Tag Open Graph -->
+    <meta property="og:title" content="José Antonio - Web Developer" />
+    <meta property="og:description" content="The personal José's Website" />
+    <meta property="og:image" content="./assets/img/profile.png" />
+    <meta property="og:url" content="https://ciriusblack13.github.io/index.html" />
+    <meta property="og:type" content="website" />
+
   <title>José Antonio - Web Developer</title>
+  <link rel="icon" alt="Jose's logo" type="image/x-icon" href="./assets/img/favicon.png">
 
   <!-- CUSTOM CSS -->
   <link rel="stylesheet" href="./assets/css/global.css">
@@ -55,7 +64,7 @@
           </li>
 
           <li>
-            <a href="./assets/pages/contact.html" class="navbar-link" data-nav-link>Contact</a>
+            <a href="./contact.html" class="navbar-link" data-nav-link>Contact</a>
           </li>
 
           <li>
@@ -206,9 +215,11 @@
                 </div>
               </a>
             </li>
-
+            <li class="works-btn">
+              <a href="./works.html" class="btn btn-primary">See all works</a>
+            </li>
           </ul>
-
+          
         </div>
       </section>
 
