--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact-me</title>
+    <link rel="icon" alt="Jose's logo" type="image/x-icon" href="./assets/img/favicon.png">
 
     <!-- GOOGLE FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -12,60 +13,77 @@
       href="https://fonts.googleapis.com/css2?family=Barlow:wght@600;700&family=Open+Sans:wght@400;500;700&family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/global.css" />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="./assets/css/global.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Document</title>
   </head>
   <body>
-
     <header class="header" data-header>
       <div class="container">
-  
-        <a href="../../index.html">
+        <a href="./index.html">
           <h1 class="logo">JOSÉ <span>ANTONIO</span></h1>
         </a>
-  
-        <button class="nav-toggle-btn" aria-label="Toggle Menu" data-nav-toggle-btn>
+
+        <button
+          class="nav-toggle-btn"
+          aria-label="Toggle Menu"
+          data-nav-toggle-btn
+        >
           <ion-icon name="menu-outline" class="menu-icon"></ion-icon>
           <ion-icon name="close-outline" class="close-icon"></ion-icon>
         </button>
-  
+
         <nav class="navbar container">
           <ul class="navbar-list">
-  
             <li>
-              <a href="../../index.html" class="navbar-link" data-nav-link>Home</a>
+              <a href="./index.html" class="navbar-link" data-nav-link
+                >Home</a
+              >
             </li>
-  
+
             <li>
-              <a href="../../index.html#about" class="navbar-link" data-nav-link>About</a>
+              <a href="./index.html#about" class="navbar-link" data-nav-link
+                >About</a
+              >
             </li>
-  
+
             <li>
-              <a href="../../index.html#works" class="navbar-link" data-nav-link>Works</a>
+              <a href="./index.html#works" class="navbar-link" data-nav-link
+                >Works</a
+              >
             </li>
-  
+
             <li>
-              <a href="../../index.html#skills" class="navbar-link" data-nav-link>Skills</a>
+              <a
+                href="./index.html#skills"
+                class="navbar-link"
+                data-nav-link
+                >Skills</a
+              >
             </li>
-  
+
             <li>
-              <a href="./assets/pages/contact.html" class="navbar-link" data-nav-link>Contact</a>
+              <a
+                href="./assets/pages/contact.html"
+                class="navbar-link"
+                data-nav-link
+                >Contact</a
+              >
             </li>
-  
+
             <li>
-              <a href="../docs/resume.pdf" class="btn btn-primary">Download CV</a>
+              <a href="./assets/docs/resume.pdf" class="btn btn-primary"
+                >Download CV</a
+              >
             </li>
-  
           </ul>
         </nav>
-  
       </div>
     </header>
 
     <!-- CONTACT -->
 
-    <section class="section contact" id="contact">
+    <section class="section contact">
       <div class="container">
         <div class="contact-card">
           <p class="card-subtitle">Don't be shy</p>
@@ -104,8 +122,12 @@
       </div>
     </section>
 
+    <!-- BACK TO HOME -->
+
+    <a href="./index.html#top" class="back-to-top active" data-back-to-top>BACK HOME</a>
+
     <!-- CUSTOM JS-->
-    <script src="../js/main.js"></script>
+    <script src="./assets/js/main.js"></script>
 
     <!-- IONICON LINK -->
     <script
