Fixed contact button's link

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <p class="profile-subtitle">a <span id="carousel"></span></p>
 
             <div class="btn-group">
-              <a href="./assets/pages/contact.html" class="btn btn-primary blue">Contact me</a>
+              <a href="./contact.html" class="btn btn-primary blue">Contact me</a>
 
               <a href="#about" class="btn">About Me</a>
             </div>
