Modify some css, fixed link's problem, added resume page

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </li>
 
           <li>
-            <a href="./assets/docs/resume.pdf" class="btn btn-primary">Download CV</a>
+            <a href="./resume.html" class="btn btn-primary">View resume</a>
           </li>
 
         </ul>
