--- a/works.html
+++ b/works.html
@@ -17,12 +17,11 @@
     />
     <link rel="stylesheet" href="./assets/css/global.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Document</title>
   </head>
   <body>
     <header class="header" data-header>
       <div class="container">
-        <a href="../../index.html">
+        <a href="./index.html">
           <h1 class="logo">JOSÉ <span>ANTONIO</span></h1>
         </a>
 
@@ -38,26 +37,26 @@
         <nav class="navbar container">
           <ul class="navbar-list">
             <li>
-              <a href="../../index.html" class="navbar-link" data-nav-link
+              <a href="./index.html" class="navbar-link" data-nav-link
                 >Home</a
               >
             </li>
 
             <li>
-              <a href="../../index.html#about" class="navbar-link" data-nav-link
+              <a href="./index.html#about" class="navbar-link" data-nav-link
                 >About</a
               >
             </li>
 
             <li>
-              <a href="../../index.html#works" class="navbar-link" data-nav-link
+              <a href="./index.html#works" class="navbar-link" data-nav-link
                 >Works</a
               >
             </li>
 
             <li>
               <a
-                href="../../index.html#skills"
+                href="./index.html#skills"
                 class="navbar-link"
                 data-nav-link
                 >Skills</a
@@ -66,7 +65,7 @@
 
             <li>
               <a
-                href="./assets/pages/contact.html"
+                href="./contact.html"
                 class="navbar-link"
                 data-nav-link
                 >Contact</a
@@ -74,8 +73,8 @@
             </li>
 
             <li>
-              <a href="../docs/resume.pdf" class="btn btn-primary"
-                >Download CV</a
+              <a href="./index.html" class="btn btn-primary"
+                >Back to home</a
               >
             </li>
           </ul>
@@ -135,6 +134,40 @@
         </div>
       </div>
     </section>
+
+    <!-- FOOTER -->
+
+  <footer class="footer">
+    <div class="container">
+
+      <p class="copyright">
+        &copy; 2023 <a href="#" class="copyright-link">J.Antonio</a>. All Rights Reseverd
+      </p>
+
+      <ul class="footer-list">
+        <li>
+          <a href="#" class="footer-link">Terms & Condition</a>
+        </li>
+
+        <li>
+          <a href="#" class="footer-link">Privacy Policy</a>
+        </li>
+      </ul>
+
+      <ul class="social-links">
+        <li>
+          <a href="https://www.linkedin.com/in/cireneu-jose-antonio/"><ion-icon name="logo-linkedin"></ion-icon></a>
+      </li>
+      <li>
+        <a href="https://www.instagram.com/ciriusblack_/"><ion-icon name="logo-instagram"></ion-icon></a>
+      </li>
+      <li>
+        <a href="https://github.com/ciriusblack13"><ion-icon name="logo-github"></ion-icon></a>
+      </li>
+      </ul>
+
+    </div>
+  </footer>
 
     <!-- BACK TO HOME -->
 
