--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,10 @@
       href="https://fonts.googleapis.com/css2?family=Barlow:wght@600;700&family=Open+Sans:wght@400;500;700&family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
     />
+
+    <!-- STYLE -->
     <link rel="stylesheet" href="./assets/css/global.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Document</title>
   </head>
   <body>
     <header class="header" data-header>
@@ -72,8 +73,8 @@
             </li>
 
             <li>
-              <a href="./assets/docs/resume.pdf" class="btn btn-primary"
-                >Download CV</a
+              <a href="./index.html" class="btn btn-primary"
+                >Back to Home</a
               >
             </li>
           </ul>
@@ -121,10 +122,6 @@
         </div>
       </div>
     </section>
-
-    <!-- BACK TO HOME -->
-
-    <a href="./index.html#top" class="back-to-top active" data-back-to-top>BACK HOME</a>
 
     <!-- CUSTOM JS-->
     <script src="./assets/js/main.js"></script>
