Added counter project

--- a/index.html
+++ b/index.html
@@ -180,15 +180,15 @@
             </li>
 
             <li>
-              <a href="#" class="works-card" style="background-image: url('');">
+              <a href="https://ciriusblack13.github.io/Counter/" class="works-card" style="background-image: url('./assets/img/counter.png');">
                 <div class="card-content">
                   <div class="card-text">
                   <p class="card-subtitle">JavaScript</p>
 
-                  <h3 class="h3 card-title">Crypto Finder</h3>
+                  <h3 class="h3 card-title">Counter</h3>
 
                   <span class="btn-link">
-                    <span>Cooming soon</span>
+                    <span>View</span>
 
                     <ion-icon name="arrow-forward"></ion-icon>
                   </span>
