--- a/works.html
+++ b/works.html
@@ -92,26 +92,26 @@
             A site of a restaurant that deals with typical Angolan cuisine.
           </p>
           <div class="share">
-            <a href=""
+            <a href="https://ciriusblack13.github.io/Ristorante_Angolano/"
               ><ion-icon name="link-outline"></ion-icon
             ></a>
-            <a href="">
+            <a href="https://github.com/ciriusblack13/Ristorante_Angolano">
               <ion-icon name="logo-github"></ion-icon>
             </a>
           </div>
         </div>
       </div>
-      <div class="card" style="background-image: url('./assets/img/crypto.png')">
+      <div class="card" style="background-image: url('./assets/img/counter.png')">
         <div class="card-body">
-          <p><span>Crypto</span> Finder</p>
+          <p><span>Basic</span> Counter</p>
           <p class="info">
-            A web app that allows you to find the main statistics of a cryptocurrency entered in the text box.
+            A simple counter web app.
           </p>
           <div class="share">
-            <a href=""
+            <a href="https://ciriusblack13.github.io/Counter/"
               ><ion-icon name="link-outline"></ion-icon
             ></a>
-            <a href="">
+            <a href="https://github.com/ciriusblack13/Counter">
               <ion-icon name="logo-github"></ion-icon>
             </a>
           </div>
